test-cases/negative/test_check_error.lay
the variable x is 10
the variable y is "hello"
print x minus y
